src/style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
  box-sizing: border-box;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
 /* main css */

@font-face {
  font-family: 'Joystix';
  src: url('/src/fonts/joystix.otf');
}
@font-face {
  font-family: 'ArcadeClassic';
  src: url('/src/fonts/arcadeClassic.TTF');
}

body {
  height: 100vh;
  width: 100vw;
  display: flex;
  justify-content: center;
  align-items: center;
}
body > div {
  height: 750px;
  width: 525px;
  background-color: #B3DAC5;
  padding: 1.75rem;
}
#container {
  height: 100%;
  width: 100%;
  background-color: #B3DAC5;
  overflow: scroll;
  overflow-x: hidden;
}
  /* scroll styles */
  #container::-webkit-scrollbar {
    width: 1.25rem;
    background-color: #F6ECD5;
    border: 1px inset black;
  }

  #container::-webkit-scrollbar-thumb {
    background-color: black;
    border: 9px solid transparent;
    border-radius: 12px;
    background-clip: content-box;
  }
  #container::-webkit-scrollbar-button {
    color: black;
    background-color: #F6ECD5;
    border: 1px inset black;
  }
  #container::-webkit-scrollbar-button:vertical:start:decrement {
    background: url(/src/img/up-arrow.png);
    background-position: center;
    height: 1.5rem;
  }
  #container::-webkit-scrollbar-button:vertical:end:increment {
    background-image: url(/src/img/down-arrow.png);
    background-position: center;
    height: 1.5rem;
  }


header {
  display: flex;
  font-family: 'Joystix';
  height: 12.5%;
  width: 87.5%;
  border: 2px solid black;
  background-color: #F2BE5E;
  justify-content: center;
  /* align-items: center; */
  font-size: 1.5rem;
  word-spacing: -0.5rem;
  box-shadow: 7px 5px 0px -1px rgba(232,140,104,1);
  transition: height 0.5s ease-in-out;
}
  h1 {
    padding-top: 1.85rem;
  }
  header:active {
    cursor: pointer;
  }

  .mouse_cursor {
    position: relative;
    width: 50px;
    height: 70px;
    top: 30px;
    right: -65px;
    color: #F6ECD5;
  }
  /* temporary, find a way to position this element properly */
  #closeFormBtn {
    position: relative;
    top: -120px;
    right: -180px;
    padding: 0;
    text-align: center;
    width: 21px;
    height: 21px;
    background-color: red;
    opacity: 0;
    transition: opacity 0.35s ease;
  }
  .show {
    opacity: 1 !important;
  }
  #modal {
    width: 87.5%;
    height: 75%;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-direction: column;
    padding-top: 1.75rem;
    padding-bottom: 1.75rem;
    transition: height 0.5s ease-in-out;
  }
  #modal_h1 {
    padding-top: 0.1rem;
    padding-right: 3.15rem;
  }

  .modal_cursor {
    position: relative;
    top: -24px;
    right: -155px;
  }

  .hidden {
    display: none;
  }

  form {
    font-size: 1rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 1.25rem;
    align-items: center;
    height: 100%;
    opacity: 0;
    transition: opacity 0.35s ease;
  }
    form label {
      text-align: center;
    }
    form button {
      font-family: 'ArcadeClassic';
      background-color: #F6ECD5;
      color: black;
      border-radius: 12px;
      padding: 2px 10px;
    }
    input, textarea {
      text-align: center;
      margin: 0.5rem;
      border-radius: 4px;
      padding: 0.25rem;
      font-size: 0.8rem;
      background-color: #F6ECD5;
      font-family: 'ArcadeClassic';
    }
      #description {
        resize: none;
      }

    fieldset {
      display: flex;
      align-items: center;
    }
      fieldset legend {
        padding: 0.25rem;
        text-align: center;
      }
      fieldset input {
        accent-color: black;
      }
      fieldset label {
        font-size: 0.85rem;
        margin-right: 0.25rem;
        font-family: 'ArcadeClassic';
      }
      label[for="low"] {
        text-shadow: 1px 1px 1px black;
        color:  green;
      }
      label[for="medium"] {
        text-shadow: 1px 1px 1px black;
        color: orange;
      }
      label[for="high"] {
        text-shadow: 1px 1px 1px black;
        color:  red;
      }

section {
  padding-top: 2rem;
  position: relative;
  width: 87.5%;
  height: 82.5%;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-auto-rows: 102.7px;
  gap: 0.5rem;
} 
  .isDone {
    filter: sepia(1) hue-rotate(90deg) brightness(0.8) saturate(0.8);
  }
  .isDueDate {
    filter: sepia(1) hue-rotate(0deg) brightness(0.8) saturate(0.8);
  }
  .taskContainer {
    font-family: 'ArcadeClassic';
    word-spacing: 2px;
    font-size: 0.8rem;
    border: 1px solid black;
    background-color: #F6ECD5;
    border-radius: 16px;
    width: 95%;
    height: 95%;
    position: relative;
    z-index: 2;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 0.8rem;
  }
    #dueDate {
      text-align: center;
      position: absolute;
      top: 78px;
      right: 7px;
      align-self: flex-end;
    }
    span::before {
      content: '';
      display: inline-block;
      width: 8px;
      height: 8px;
      margin-right: 4px;
      border-radius: 50%;
    }
      .priorityLow::before {
        background-color: green;
      }
      .priorityMedium::before {
        background-color: orange;
      }
      .priorityHigh::before {
        background-color: red;
      }

  .bgContainer {
    border: 1px solid black;
    background-color: #E88D69;
    position: relative;
    top: -94px;
    right: -3px;
    z-index: 1;
    width: 95%;
    height: 95%;
    border-radius: 16px;
  }
  
  .controlBar {
    font-family: 'ArcadeClassic';
    display: flex;
    justify-content: flex-end;
    z-index: 3;
    position: relative;
    top: -198px;
    right: -70px;
    border: 1px solid black;
    background-color: #F2BE5E;
    box-shadow: 4px 4px 0px -1px rgba(232,140,104,1);
    width: 65%;
    height: 16%;
  }
    h2 {
      display: flex;
      width: 100%;
      justify-content: center;
      align-items: center;
      font-size: 0.75rem;
      text-align: center;
    }
    #buttons {
      display: flex;
      width: 27.5%;
    }
      #done, #remove {
        display: flex;
        justify-content: center;
        padding: 0;
        width: 50%;
        height: 100%;
        border-top: 1px solid #F6ECD5;
        border-left: 1px solid black;
        border-right: 1px solid black;
        border-bottom: 1px solid black;
        background-color: #F6ECD5;
      }
      #done:active, #remove:active {
        border-top: 1px inset #F6ECD5;
        border-left: 1px inset black;
        border-right: 1px inset black;
        border-bottom: 1px inset black;
      }
      #remove {
        border-left: none;
      }

@media (max-width: 420px) {

  body > div {
    height: 100%;
    width: 100%;
    padding: 1rem;
  }

  #container {
    overflow-y: scroll;
    overflow-x: hidden;
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  header {
    width: 90%;
    height: 10%;
  }
    .mouse_cursor {
      position: relative;
      width: 40px;
      height: 50px;
      top: 31px;
      right: -15px;
    }
    #closeFormBtn {
      position: relative;
      top: -23%;
      right: -46%;
      padding: 0;
      text-align: center;
      width: 21px;
      height: 21px;
      background-color: red;
      opacity: 0;
      transition: opacity 0.35s ease;
    }
  #modal {
    width: 90%;
  }
  #modal_h1 {
    padding-left: 0;
    padding-right: 2.5rem;
  }
  .modal_cursor {
    position: relative;
    top: -23px;
    right: -105px;
  }
  section {
    grid-template-columns: repeat(1, 1fr);
    grid-auto-rows: 150px;
    gap: 1rem;
  }
    .bgContainer {
      top: -140px;
    }

    .controlBar {
      top: -290px;
      height: 14%;
    }
      #edit, #remove {
        align-items: center;
      }
}

@media (max-width: 320px) {
  
  body > div {
    height: 100%;
    width: 100%;
    padding: 1rem;
  }

  #container {
    overflow-y: scroll;
    overflow-x: hidden;
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  header {
    width: 90%;
    height: 10%;
  }
    .mouse_cursor {
      position: relative;
      width: 40px;
      height: 50px;
      top: 31px;
      right: -15px;
    }
    #closeFormBtn {
      position: relative;
      top: -23%;
      right: -44%;
      padding: 0;
      text-align: center;
      width: 21px;
      height: 21px;
      background-color: red;
      opacity: 0;
      transition: opacity 0.35s ease;
    }
  #modal {
    width: 90%;
  }
  #modal_h1 {
    padding-left: 0;
    padding-right: 2.5rem;
  }
  .modal_cursor {
    position: relative;
    top: -23px;
    right: -105px;
  }
  section {
    grid-template-columns: repeat(1, 1fr);
  }
}

